App to api refactor init
